# jirust-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE.md  CREDITS.md  Cargo.toml  README.md  SECURITY.md  deny.toml  result.txt
jira_v3_openapi/: Cargo.toml  README.md
jira_v3_openapi/.openapi-generator/: FILES
jira_v3_openapi/docs/: ActorInputBean.md  AddAtlassianTeamRequest.md  AddSecuritySchemeLevelsRequestBean.md  AppMigrationApi.md  AppPropertiesApi.md  ApplicationRolesApi.md  ApprovalConfiguration.md  ApprovalConfigurationPreview.md  ArchivedIssuesFilterRequest.md  AssociatedItemBean.md  AssociationContextObject.md  AttachmentMetadata.md  AvatarsApi.md  BoardColumnPayload.md  BoardFeaturePayload.md  BoardPayload.md  BoardsPayload.md  BulkChangelogRequestBean.md  BulkChangelogResponseBean.md  BulkContextualConfiguration.md  BulkCustomFieldOptionCreateRequest.md  BulkCustomFieldOptionUpdateRequest.md  BulkEditActionError.md  BulkFetchIssueRequestBean.md  BulkIssuePropertyUpdateRequest.md  BulkIssueResults.md  BulkProjectPermissions.md  BulkRedactionRequest.md  BulkRedactionResponse.md  BulkTransitionGetAvailableTransitions.md  BulkTransitionSubmitInput.md  BulkWorklogKeyRequestBean.md  BulkWorklogKeyResponseBean.md  CardLayout.md  CardLayoutField.md  ChangedValueBean.md  Changelog.md  Comment.md  ComponentWithIssueCount.md  ConditionGroupConfiguration.md  (+405 more)
jira_v3_openapi/src/: lib.rs
jira_v3_openapi/src/additional_apis/: issue_attachments_api.rs  mod.rs
jira_v3_openapi/src/apis/: announcement_banner_api.rs  app_data_policies_api.rs  app_migration_api.rs  app_properties_api.rs  application_roles_api.rs  audit_records_api.rs  avatars_api.rs  classification_levels_api.rs  configuration.rs  dashboards_api.rs  default_api.rs  dynamic_modules_api.rs  field_schemes_api.rs  filter_sharing_api.rs  filters_api.rs  group_and_user_picker_api.rs  groups_api.rs  issue_attachments_api.rs  issue_bulk_operations_api.rs  issue_comment_properties_api.rs  issue_comments_api.rs  issue_custom_field_associations_api.rs  issue_custom_field_configuration_apps_api.rs  issue_custom_field_contexts_api.rs  issue_custom_field_options_api.rs  issue_custom_field_options_apps_api.rs  issue_custom_field_values_apps_api.rs  issue_field_configurations_api.rs  issue_fields_api.rs  issue_link_types_api.rs  issue_links_api.rs  issue_navigator_settings_api.rs  issue_notification_schemes_api.rs  issue_priorities_api.rs  issue_properties_api.rs  issue_redaction_api.rs  issue_remote_links_api.rs  issue_resolutions_api.rs  issue_search_api.rs  issue_security_level_api.rs  (+62 more)
jira_v3_openapi/src/models/: actor_input_bean.rs  actors_map.rs  add_atlassian_team_request.rs  add_field_bean.rs  add_group_bean.rs  add_notifications_details.rs  add_security_scheme_levels_request_bean.rs  announcement_banner_configuration.rs  announcement_banner_configuration_update.rs  app_workflow_transition_rule.rs  application.rs  application_property.rs  application_role.rs  approval_configuration.rs  approval_configuration_preview.rs  archive_issue_async_request.rs  archived_issues_filter_request.rs  associate_field_configurations_with_issue_types_request.rs  associate_security_scheme_with_project_details.rs  associated_item_bean.rs  association_context_object.rs  attachment.rs  attachment_archive.rs  attachment_archive_entry.rs  attachment_archive_impl.rs  attachment_archive_item_readable.rs  attachment_archive_metadata_readable.rs  attachment_metadata.rs  attachment_settings.rs  audit_record_bean.rs  audit_records.rs  auto_complete_suggestion.rs  auto_complete_suggestions.rs  available_dashboard_gadget.rs  available_dashboard_gadgets_response.rs  available_workflow_connect_rule.rs  available_workflow_forge_rule.rs  available_workflow_system_rule.rs  available_workflow_trigger_types.rs  available_workflow_triggers.rs  (+925 more)
jira_v3_openapi/src/tests/: mod.rs  models_tests.rs  serialization_tests.rs  validation_tests.rs
jira_v3_openapi/tests/: api_signature_tests.rs  simple_model_tests.rs
jirust-cli/: Cargo.toml  config_example.toml  jirust-cli-example.js  jirust_cli_js_example.js
jirust-cli/src/: args.rs  config.rs  executors.rs  lib.rs  main.rs  runners.rs  utils.rs
jirust-cli/src/args/: commands.rs
jirust-cli/src/config/: config_file.rs
jirust-cli/src/executors/: config_executor.rs  jira_commands_executors.rs  version_executor.rs
jirust-cli/src/runners/: cfg_cmd_runner.rs  jira_cmd_runners.rs
jirust-cli/src/tests/: advanced_runner_tests.rs  args_tests.rs  basic_tests.rs  cached_scanner_coverage_tests.rs  changelog_tests.rs  command_parsing_tests.rs  comprehensive_executor_tests.rs  comprehensive_runner_tests.rs  config_runner_tests.rs  config_tests.rs  coverage_boost_tests.rs  coverage_improvement_tests.rs  error_handling_tests.rs  executor_and_printer_tests.rs  (+12 more)
jirust-cli/tests/: cli_main_tests.rs  lib_comprehensive.rs  runner_comprehensive.rs
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: ActorsMap.md  AnnouncementBannerApi.md  AnnouncementBannerConfiguration.md  AnnouncementBannerConfigurationUpdate.md  AppDataPoliciesApi.md  AppPropertiesApi.md  Application.md  ApplicationProperty.md  ApplicationRolesApi.md  ArchiveIssueAsyncRequest.md  AttachmentArchive.md  AttachmentArchiveImpl.md  AttachmentArchiveItemReadable.md  AuditRecordBean.md  AuditRecords.md  AutoCompleteSuggestion.md  AutoCompleteSuggestions.md  AvailableDashboardGadget.md  AvailableWorkflowConnectRule.md  AvailableWorkflowForgeRule.md  AvailableWorkflowTriggers.md  Avatar.md  AvatarUrlsBean.md  Avatars.md  BulkChangeOwnerDetails.md  BulkEditShareableEntityRequest.md  BulkEditShareableEntityResponse.md  BulkOperationErrorResponse.md  BulkOperationErrorResult.md  BulkOperationProgress.md  BulkPermissionGrants.md  BulkPermissionsRequestBean.md  BulkProjectPermissionGrants.md  ChangeDetails.md  ClassificationLevelsApi.md  ComponentJsonBean.md  ConditionGroupUpdate.md  Configuration.md  ConnectCustomFieldValue.md  ConnectWorkflowTransitionRule.md  (+455 more)
openapi/openapi-spec/: jira-v3.v3.json
(+899 files in other folders)
