[package]
name = "jira_v3_openapi"
version = "1.0.10"
authors = [
    "Atlassian OpenAPI <ecosystem@atlassian.com>",
    "Emanuele Panigati <ilpanich@gmail.com>",
]
description = "Jira Cloud platform REST API lib (OpenAPI document version: 1001.0.0-SNAPSHOT-d0630ad8e2b33a2fc7347459a3397d94eb3a0393)"
keywords = ["jira", "openapi"]
repository = "https://github.com/ilpanich/jirust-cli"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.3", features = ["json", "multipart"] }

[profile.release]
opt-level = "s"
