[package]
name = "jira_v3_openapi"
version = "1.6.1"
authors = [
    "Atlassian OpenAPI <ecosystem@atlassian.com>",
    "Emanuele Panigati <ilpanich@gmail.com>",
]
description = "Jira Cloud platform REST API lib (OpenAPI document version: 1001.0.0-SNAPSHOT-af42c50d50804c2f1b8ad4bb80d52c53890867e2)"
keywords = ["jira", "openapi"]
repository = "https://github.com/ilpanich/jirust-cli"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "^1.0", default-features = false, features = ["derive"] }
serde_with = { version = "^3.16", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
serde_repr = "0.1.20"
url = "^2.5"
uuid = { version = "^1.20", default-features = false, features = [
    "serde",
    "v4",
    "js",
] }
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[features]
default = ["common"] # Default features
all = [
    "common",
    "issues_api",
    "projects_api",
    "version_api",
    "link_issues_api",
] # This feature is used to include all the generated modules
common = [
] # This feature is used to include basic common code that is used by all the generated modules
issues_api = [
] # This feature is used to include the Jira issues API related stuff
projects_api = [
] # This feature is used to include the Jira projects API related stuff
version_api = [
] # This feature is used to include the Jira version API related stuff
link_issues_api = [
] # This feature is used to include the Jira link issues API related stuff

[package.metadata.docs.rs]
all-features = true
