[package]
name = "jirust-cli"
version = "0.16.5"
edition = "2024"
rust-version = "1.85.0"
authors = ["Emanuele Panigati <ilpanich@gmail.com>"]
description = "A CLI tool to interact with Jira"
keywords = ["jira", "cli"]
repository = "https://github.com/ilpanich/jirust-cli"
documentation = "https://docs.rs/jirust-cli"
license = "Apache-2.0"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_derive = "4.5"
rpassword = "7.4.0"
jira_v3_openapi = { version = "1.3.8", default-features = false, features = [
    "common",
    "issues_api",
    "projects_api",
    "version_api",
    "link_issues_api",
] }
prettytable-rs = "0.10.0"
chrono = "0.4.41"
regex = "1.11.1"
futures = "0.3.31"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt",
] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"
wasm-bindgen-test = "0.3.50"
tempfile = "3.8"
mockall = "0.13.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
