[package]
name = "jirust-cli"
version = "0.16.13"
edition = "2024"
rust-version = "1.85.0"
authors = ["Emanuele Panigati <ilpanich@gmail.com>"]
description = "A CLI tool to interact with Jira"
keywords = ["jira", "cli"]
repository = "https://github.com/ilpanich/jirust-cli"
documentation = "https://docs.rs/jirust-cli"
license = "Apache-2.0"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_derive = "4.5"
rpassword = "7.4.0"
jira_v3_openapi = { version = "1.5.1", default-features = false, features = [
    "common",
    "issues_api",
    "projects_api",
    "version_api",
    "link_issues_api",
] }
prettytable-rs = "0.10.0"
chrono = "0.4.42"
regex = "1.12.2"
futures = "0.3.31"
async-trait = "0.1"
yara-x = "1.10.0"
anyhow = "1.0.100"
git2 = "0.20.3"
walkdir = "2.5.0"
zip = "2.2"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
tempfile = "3.23.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "rt",
] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"
wasm-bindgen-test = "0.3.56"
mockall = "0.14.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
